--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           node-version: 20
           cache: yarn
-      - run: yarn install --frozen-lockfile
+          cache-dependency-path: yarn.lock
+      - run: corepack enable
+      - run: yarn --version
+      - run: yarn install --immutable
       - run: yarn lint
       - run: yarn build
