feat: build chamber-first cli with interactive tui and headless run mode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,10 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
+    "jsx": "react-jsx",
+    "types": ["node"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
