--- a/package.json
+++ b/package.json
@@ -16,17 +16,31 @@
   "files": [
     "dist"
   ],
+  "bin": {
+    "chambr": "./dist/cli/index.js",
+    "chambr-tui": "./dist/cli/index.js"
+  },
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts --clean",
+    "build": "yarn build:lib && yarn build:cli",
+    "build:lib": "tsup src/index.ts --format esm,cjs --dts --clean",
+    "build:cli": "tsup src/cli/index.ts --format esm --out-dir dist/cli --clean false && node -e \"const fs=require('fs');const p='dist/cli/index.js';const src=fs.readFileSync(p,'utf8');if(!src.startsWith('#!')){fs.writeFileSync(p,'#!/usr/bin/env node\\\\n'+src);}\"",
     "lint": "tsc --noEmit",
+    "test": "vitest run",
     "prepare": "npm run build"
   },
   "dependencies": {
-    "@chambr/engine-core": "file:../chambr-core"
+    "@chambr/engine-core": "file:../chambr-core",
+    "cac": "^6.7.14",
+    "ink": "^5.2.1",
+    "ink-text-input": "^6.0.0",
+    "react": "^18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
+    "@types/react": "^18.3.24",
     "tsup": "^8.5.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^2.1.9"
   },
   "engines": {
     "node": ">=18"
