feat: add build-and-run tui script and fullscreen terminal mode

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "build": "yarn build:lib && yarn build:cli",
     "build:lib": "tsup src/index.ts --format esm,cjs --dts --clean",
     "build:cli": "tsup src/cli/index.ts --format esm --out-dir dist/cli --clean false && node -e \"const fs=require('fs');const p='dist/cli/index.js';const src=fs.readFileSync(p,'utf8');if(!src.startsWith('#!')){fs.writeFileSync(p,'#!/usr/bin/env node\\\\n'+src);}\"",
+    "tui": "yarn build && yarn node dist/cli/index.js tui",
     "lint": "tsc --noEmit",
     "test": "vitest run",
     "prepare": "npm run build"
